PLAT-474 fix partners alignment ie

--- a/profiles/cr/themes/custom/campaign_base/sass/components/partners/_partners-row.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/partners/_partners-row.scss
@@ -18,6 +18,7 @@
     text-align: center;
   }
   .partners-row__logos-list {
+    text-align: center; // ie
     ul {
       display: flex;
       text-align: center;
@@ -33,7 +34,7 @@
         max-width: calc(100% - (#{gutter()} * 2));
       }
       @include breakpoint($screen-md-max) {
-        max-width: calc($max-width - (#{gutter()} * 1));
+        max-width: calc(#{$max-width} - (#{gutter()} * 1));
       }
       //
     }
@@ -42,10 +43,16 @@
       margin-bottom: gutter();
       @include breakpoint($screen-md) {
         @include span(3);
+        display: inline-block;
+        float: none;
       }
       @include breakpoint($screen-lg) {
         @include span(2);
+        display: inline-block;
+        float: none;
       }
+      display: inline-block;
+      float: none;
     }
     img {
       height: auto;
